# FFMC

./: .gitignore  MONERO.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: default.yaml  logging.yaml  profiles.yaml
ffmc/: __init__.py  __main__.py  cli.py  init.py  main.py
ffmc/analysis/: codec_advisor.py  codec_detector.py
ffmc/config/: config.json  dir.txt  profiles.json  settings.py
ffmc/conversion/: command_builder.py  encoder.py
ffmc/core/: orchestrator.py  worker_pool.py
ffmc/interactive/: codec_selector.py
ffmc/io/: file_scanner.py
ffmc/monitoring/: logger.py  metrics_collector.py  notifier.py  progress_tracker.py
ffmc/persistence/: database.py  state_manager.py
ffmc/utils/: exceptions.py
